--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "fine-uploader": "^5.16.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.1",
