install form data

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "fine-uploader": "^5.16.2",
+    "form-data": "^2.3.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.1",
     "react": "^16.3.2",
@@ -15,7 +16,8 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uikit": "^3.0.0-beta.42"
   },
   "scripts": {
     "start": "react-scripts start",
