--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,11 @@
 {
   "short_name": "LookMark",
   "name": "LookMark",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
+  "developer": {
+    "name": "Julie Kim",
+    "url": "http://itsjuliek.com"
+  },
+  "manifest_version": 2,
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
